# ml-solution-architect-lab

./: .gitignore  Makefile  README.md  requirements.txt
00_metadata_raglite_summarization/: .env  pseudocode.py  pyproject.toml  readme.md
00_metadata_raglite_summarization/data/docs/: ag_prices.txt  public_release.txt  sample.txt
00_metadata_raglite_summarization/data/examples/: gold_metadata.jsonl
00_metadata_raglite_summarization/data/taxonomy/: taxonomy.jsonl
00_metadata_raglite_summarization/src/metadata_rag_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
00_metadata_raglite_summarization/src/metaragl/: cli.py  config.py  pipeline.py
00_metadata_raglite_summarization/src/metaragl/io/: loaders.py
00_metadata_raglite_summarization/src/metaragl/llm/: client.py  prompts.py
00_metadata_raglite_summarization/src/metaragl/preprocess/: chunk.py  clean.py
00_metadata_raglite_summarization/src/metaragl/retrieval/: embedder.py  retrieve.py  vector_store.py
00_metadata_raglite_summarization/src/metaragl/schema/: metadata_schema.py  validate.py
00_metadata_raglite_summarization/tests/: test_schema.py
01_tabular-ml-mlops/: interview_snippets.py  readme.md  requirements.txt
01_tabular-ml-mlops/data/: train_fake.csv
01_tabular-ml-mlops/src/: api.py  config.py  (+4 more)
02_cv-deep-learning/: Makefile  p2_interview_snippets.py  readme.md  requirements.txt
03_nlp-genai-rag-investing-banking/: readme.md
06_multi_agents_supplychain/: app.py  readme.md  requirements.txt
AI-ML-Engineer-Code-Prep/: node_digital_ML_engineer_test.py
(+25 files in other folders)
